Update ContactForm and GithubProjects components; modify placeholders and add project overview section; fix scrollbar styles and update config with new personal details

--- a/app/globals.css
+++ b/app/globals.css
@@ -68,20 +68,20 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 5px
+  width: 5px;
 }
 
 ::-webkit-scrollbar-track {
-  background: transparent
+  background: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
   background: #222121;
-  border-radius: 5px
+  border-radius: 5px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #555
+  background: #555;
 }
 
 @keyframes shiny-sweep {
